# lesgoski

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  tailwind.config.js
deploy/: nginx.conf  setup.sh
mvp/: config.py  db.py  main.py  modules.py  pyproject.toml  scanner.py
mvp/mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mvp/mvp_gemini/: scheduler.py  test_setup.py
mvp/mvp_gemini/core/: schemas.py
mvp/mvp_gemini/database/: db.py  models.py
mvp/mvp_gemini/services/: matcher.py  notifier.py  orchestrator.py  scanner.py
mvp/mvp_gemini/webapp/: main.py  utils.py
mvp/mvp_gemini/webapp/assets/: filtered_airports.csv
mvp/mvp_gemini/webapp/templates/: base.html  deals.html  profile_form.html
mvp/test/: prova_gemini.py  prova_ryanair.py  test_fast_flights.py  tmp.html
src/lesgoski/: __init__.py  config.py
src/lesgoski/core/: schemas.py
src/lesgoski/database/: engine.py  models.py
src/lesgoski/scheduler/: runner.py
src/lesgoski/services/: airports.py  grouping.py  matcher.py  notifier.py  orchestrator.py  scanner.py  stats.py
src/lesgoski/webapp/: app.py  auth.py  utils.py
src/lesgoski/webapp/data/: filtered_airports.csv  slim-2.json
src/lesgoski/webapp/static/: scripts.js  style.css
src/lesgoski/webapp/templates/: alerts.html  base.html  deal_detail.html  deals.html  goskis.html  login.html  profile_form.html  settings.html  signup.html
tests/: conftest.py  test_airports.py  test_auth.py  test_matcher.py  test_schemas.py  test_webapp_utils.py
